// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionSelect component should render all actions for system rules 1`] = `
<div
  class="ActionSelect btn-group"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-1 dropdown-toggle btn btn-secondary"
    type="button"
  >
    Add tags
  </button>
  <div
    aria-hidden="true"
    class="dropdown-menu"
    role="menu"
    tabindex="-1"
  >
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Deliver message
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Send email
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Reply to customer
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Add internal note
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Apply macro
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Add tags
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Remove tags
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Reset tags
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Set subject
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Set status
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Set ticket field
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Snooze for
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Assign agent
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Assign team
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Delete ticket
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Hide Facebook comment
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Like Facebook comment
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Exclude ticket from Auto-Merge
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Exclude ticket from CSAT
    </button>
  </div>
</div>
`;

exports[`ActionSelect component should render all non-system actions for non-system rules 1`] = `
<div
  class="ActionSelect btn-group"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-1 dropdown-toggle btn btn-secondary"
    type="button"
  >
    Add tags
  </button>
  <div
    aria-hidden="true"
    class="dropdown-menu"
    role="menu"
    tabindex="-1"
  >
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Send email
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Reply to customer
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Add internal note
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Apply macro
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Add tags
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Remove tags
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Reset tags
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Set subject
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Set status
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Set ticket field
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Snooze for
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Assign agent
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Assign team
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Delete ticket
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Hide Facebook comment
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Like Facebook comment
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Exclude ticket from Auto-Merge
    </button>
    <button
      class="dropdown-item"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      Exclude ticket from CSAT
    </button>
  </div>
</div>
`;
